--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -65,24 +65,30 @@
             <p><strong>Propriedades:</strong></p>
             <ul>
                 <li><strong>Fechamento:</strong> Quando somamos, subtraímos ou multiplicamos dois números inteiros, o resultado sempre será outro número inteiro. Exemplo: <span class="example-number">( -3 + 2 = -1 )</span>.</li>
-                <li><strong>Identidade Aditiva e Multiplicativa:</strong> O número 0 é o elemento neutro na adição, pois não altera o valor do número somado a ele (<span class="example-number">x + 0 = x</span>). O número 1 é o elemento neutro na multiplicação, pois multiplicar qualquer número por 1 não altera o valor (<span class="example-number">x × 1 = x</span>).</li>
+                <li><strong>Identidade Aditiva e Multiplicativa:</strong> O número "0" é o elemento neutro na adição, pois não altera o valor do número somado a ele (<span class="example-number">2 + 0 = 2</span>). O número 1 é o elemento neutro na multiplicação, pois multiplicar qualquer número por 1 não altera o valor (<span class="example-number">2 × 1 = 2</span>).</li>
                 <li><strong>Inverso Aditivo:</strong> Para cada número inteiro <span class="example-number">x</span>, existe um número oposto <span class="example-number">-x</span> que, quando somado ao número original, resulta em zero. Exemplo: <span class="example-number">x + (-x) = 0</span>.</li>
             </ul>
-            <p><strong>Aplicação:</strong> Os números inteiros são úteis em situações que envolvem valores negativos, como por exemplo temperaturas negativas abaixo de 0.</p>
+            <p><strong>Aplicação:</strong> Os números inteiros são úteis em situações que envolvem valores negativos, como por exemplo temperaturas abaixo de 0.</p>
             <hr>
         
             <h2 id="numeros-racionais"><strong>3. Números Racionais</strong></h2>
-            <p><strong>Definição:</strong> Os <strong>números racionais</strong> podem ser expressos como fração de dois números inteiros, onde o denominador é diferente de zero.</p>
-            <p><strong>Exemplo:</strong> <span class="example-number">Q = { a/b | a ∈ Z, b ∈ Z, b ≠ 0 }</span></p>
+            <p><strong>Definição:</strong> Os <strong>números racionais</strong> são aqueles que podem ser expressos como uma fração, ou seja, como a razão entre dois números inteiros. O numerador (a parte de cima da fração) pode ser qualquer número inteiro, e o denominador (a parte de baixo) também é um número inteiro, mas deve ser diferente de zero. Isso inclui frações positivas, negativas e o próprio número zero.</p>
+            <p><strong>Exemplo:</strong> <span class="example-number">Q = { a/b | a ∈ Z, b ∈ Z, b ≠ 0 }</span> (onde "a" e "b" são números inteiros, e "b" não pode ser zero). Alguns exemplos de números racionais são: <span class="example-number">1/2</span> (metade), <span class="example-number">3/4</span> (três quartos), <span class="example-number">-5/2</span> (menos cinco sobre dois).</p>
 
             <p><strong>Propriedades:</strong></p>
             <ul>
-                <li><strong>Densidade:</strong> Entre dois números racionais sempre existe outro número racional.</li>
-                <li><strong>Fechamento:</strong> Soma, subtração, multiplicação e divisão de dois números racionais resultam em outro número racional.</li>
-                <li><strong>Decimais Finitos ou Repetidos:</strong> Números racionais têm decimais finitos ou periódicos.</li>
+                <li><strong>Densidade:</strong> Entre dois números racionais, sempre existe outro número racional. Isso significa que podemos continuar encontrando frações entre dois números indefinidamente. Exemplo: Entre os números <span class="example-number">1/2</span> e <span class="example-number">1/3</span>, podemos encontrar <span class="example-number">5/12</span>, mas também podemos encontrar <span class="example-number">11/24</span>, ou qualquer outra fração entre esses dois valores.</li>
+                <li><strong>Fechamento:</strong> A soma, subtração, multiplicação e divisão (exceto por zero) de dois números racionais sempre resulta em outro número racional. Por exemplo, se somarmos <span class="example-number">2/3</span> e <span class="example-number">3/4</span>, obtemos <span class="example-number">17/12</span>, que é outro número racional.</li>
+                <li><strong>Decimais Finitos ou Repetidos:</strong> Todo número racional pode ser escrito como um decimal que termina (decimal finito) ou como um decimal que se repete em um padrão (decimal periódico). Exemplo de decimal finito: <span class="example-number">1/4 = 0,25</span>. Exemplo de decimal periódico: <span class="example-number">1/3 = 0,333...</span> (onde o 3 se repete infinitamente).</li>
             </ul>
-            <p><strong>Aplicação:</strong> Utilizado em medições, como frações de uma quantidade ou taxas de juros.</p>
+            <p><strong>Aplicação:</strong> Números racionais são amplamente usados em nosso cotidiano. Por exemplo:</p>
+            <ul>
+                <li><strong>Medições:</strong> Se você estiver dividindo uma pizza entre amigos, provavelmente usará frações para representar as partes, como "cada pessoa vai comer 1/8 da pizza".</li>
+                <li><strong>Finanças:</strong> Taxas de juros são frequentemente expressas como números racionais. Por exemplo, uma taxa de juros de 1,5% ao mês pode ser representada como a fração <span class="example-number">3/200</span>.</li>
+                <li><strong>Conversões:</strong> Quando convertemos unidades de medida, como quilogramas para gramas, usamos frações. Por exemplo, 1 kg é igual a <span class="example-number">1000/1</span> gramas.</li>
+            </ul>
             <hr>
+
 
             <h2 id="comparacao"><strong>4. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
             <table>
