--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -89,46 +89,62 @@
             </ul>
             <hr>
 
-
             <h2 id="comparacao"><strong>4. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Propriedade</th>
-                        <th>Números Naturais</th>
-                        <th>Números Inteiros</th>
-                        <th>Números Racionais</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Representação</td>
-                        <td>{0, 1, 2, 3, ...}</td>
-                        <td>{..., -2, -1, 0, 1, 2, ...}</td>
-                        <td>a/b, a, b ∈ Z, b ≠ 0</td>
-                    </tr>
-                    <tr>
-                        <td>Contém números negativos?</td>
-                        <td>Não</td>
-                        <td>Sim</td>
-                        <td>Sim</td>
-                    </tr>
-                    <tr>
-                        <td>Contém frações?</td>
-                        <td>Não</td>
-                        <td>Não</td>
-                        <td>Sim</td>
-                    </tr>
-                    <tr>
-                        <td>Operações fechadas?</td>
-                        <td>Sim (+, *)</td>
-                        <td>Sim (+, -, *)</td>
-                        <td>Sim (+, -, *, /)</td>
-                    </tr>
-                </tbody>
-            </table>
+        <p>Os números naturais, inteiros e racionais fazem parte do conjunto de números que usamos no dia a dia, mas possuem algumas diferenças importantes em termos de suas propriedades e usos. A tabela abaixo resume essas diferenças:</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Propriedade</th>
+                    <th>Números Naturais</th>
+                    <th>Números Inteiros</th>
+                    <th>Números Racionais</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>Representação</strong></td>
+                    <td>{0, 1, 2, 3, ...}</td>
+                    <td>{..., -2, -1, 0, 1, 2, ...}</td>
+                    <td><span class="example-number">a/b</span>, onde <span class="example-number">a</span> e <span class="example-number">b</span> são inteiros e <span class="example-number">b ≠ 0</span></td>
+                </tr>
+                <tr>
+                    <td><strong>Contém números negativos?</strong></td>
+                    <td>Não</td>
+                    <td>Sim</td>
+                    <td>Sim</td>
+                </tr>
+                <tr>
+                    <td><strong>Contém frações?</strong></td>
+                    <td>Não</td>
+                    <td>Não</td>
+                    <td>Sim</td>
+                </tr>
+                <tr>
+                    <td><strong>Operações fechadas?</strong></td>
+                    <td>Sim (para adição e multiplicação)</td>
+                    <td>Sim (para adição, subtração e multiplicação)</td>
+                    <td>Sim (para adição, subtração, multiplicação e divisão, exceto por zero)</td>
+                </tr>
+            </tbody>
+        </table>
 
-            <hr>
+        <p><strong>Explicação detalhada:</strong></p>
+        <ul>
+            <li><strong>Representação:</strong> Os <strong>números naturais</strong> são os números inteiros não negativos que usamos para contar objetos, como "1 maçã", "2 livros", e assim por diante. Os <strong>números inteiros</strong> incluem todos os números naturais, além de seus opostos negativos (por exemplo, -1, -2, -3). Já os <strong>números racionais</strong> podem ser expressos como frações, ou seja, a divisão de dois números inteiros, como 1/2, 3/4, etc.</li>
+
+            <li><strong>Números negativos:</strong> Apenas os <strong>números inteiros</strong> e <strong>racionais</strong> podem ser negativos. Por exemplo, em uma conta bancária, um saldo negativo pode ser representado como -50, indicando que você está devendo 50 reais.</li>
+
+            <li><strong>Frações:</strong> Apenas os <strong>números racionais</strong> podem ser expressos como frações. Por exemplo, se você cortar uma pizza em 4 pedaços e comer 3, pode dizer que comeu 3/4 da pizza.</li>
+
+            <li><strong>Operações fechadas:</strong> Isso significa que, se você fizer certas operações (como soma, subtração, multiplicação ou divisão) entre dois números do mesmo conjunto, o resultado também estará dentro desse conjunto. 
+                <ul>
+                    <li>Para os <strong>números naturais</strong>, a soma e multiplicação sempre resultam em outro número natural (por exemplo, 2 + 3 = 5).</li>
+                    <li>Para os <strong>números inteiros</strong>, além da soma e multiplicação, a subtração também resulta em um número inteiro (por exemplo, 5 - 7 = -2).</li>
+                    <li>Os <strong>números racionais</strong> são fechados para soma, subtração, multiplicação e divisão (exceto divisão por zero). Por exemplo, 1/2 + 1/3 = 5/6.</li>
+                </ul>
+            </li>
+        </ul>
+        <hr>
 
             <h2 id="exemplos"><strong>5. Exemplos de Aplicações na Vida Real</strong></h2>
             <ul>
