--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -26,6 +26,7 @@
             <a href="#numeros-naturais">Números Naturais</a>
             <a href="#numeros-inteiros">Números Inteiros</a>
             <a href="#numeros-racionais">Números Racionais</a>
+            <a href="#numeros-reais">Números Racionais</a>
             <a href="#comparacao">Comparação</a>
             <a href="#exemplos">Exemplos na Vida Real</a>
             <a href="#exercicios">Exercícios Propostos</a>
@@ -146,7 +147,26 @@
         </ul>
         <hr>
 
-            <h2 id="exemplos"><strong>5. Exemplos de Aplicações na Vida Real</strong></h2>
+        <h2 id="numeros-reais"><strong>5. Números Reais</strong></h2>
+        <p><strong>Definição:</strong> Os <strong>números reais</strong> incluem todos os números que podem ser representados na reta numérica. Isso abrange os números racionais (frações) e os números irracionais, que não podem ser expressos como uma fração de dois inteiros. Em outras palavras, os números reais são qualquer número que pode ser escrito com uma parte decimal.</p>
+        <p><strong>Exemplo:</strong> <span class="example-number">R = {..., -2,5, -√2, 0, 1, π, 3,1415...}</span>. Exemplos incluem números como 1, -3/2, √2 (raiz quadrada de 2), e π (pi).</p>
+
+        <p><strong>Propriedades:</strong></p>
+        <ul>
+            <li><strong>Completo:</strong> A principal característica dos números reais é que eles preenchem completamente a reta numérica. Ou seja, qualquer ponto na reta pode ser representado por um número real, seja ele racional ou irracional. Por exemplo, entre 1 e 2, além das frações como 1/2, também existem números irracionais como √2.</li>
+            <li><strong>Inclui números irracionais:</strong> Números irracionais são aqueles que não podem ser expressos como uma fração, e têm decimais infinitos não periódicos. Exemplos de números irracionais são π (pi ≈ 3,14159...) e √2 (raiz de 2 ≈ 1,414...). Esses números não podem ser escritos como frações simples e seus decimais nunca terminam nem se repetem em um padrão.</li>
+            <li><strong>Fechamento:</strong> Como os números racionais, os números reais também são fechados para adição, subtração, multiplicação e divisão (exceto divisão por zero). Por exemplo, somar √2 e 3 resulta em outro número real: 3 + √2 ≈ 4,414.</li>
+        </ul>
+
+        <p><strong>Aplicação:</strong> Os números reais são utilizados em praticamente todas as situações de medição no mundo físico, como:
+        <ul>
+            <li><strong>Medição de comprimento:</strong> Se você medir a altura de uma pessoa, pode obter um número real como 1,75 metros.</li>
+            <li><strong>Áreas e volumes:</strong> Para calcular a área de um círculo, utilizamos π. Se o raio do círculo é 1 metro, a área será <span class="example-number">π m²</span>, ou aproximadamente <span class="example-number">3,14159 m²</span>.</li>
+            <li><strong>Física:</strong> Muitos fenômenos físicos, como velocidade, aceleração, e energia, são descritos com números reais, inclusive números irracionais como √2 e π em fórmulas matemáticas.</li>
+        </ul>
+        <hr>
+
+            <h2 id="exemplos"><strong>6. Exemplos de Aplicações na Vida Real</strong></h2>
             <ul>
                 <li><strong>Números Naturais:</strong> Contagem de objetos (ex.: alunos em uma sala).</li>
                 <li><strong>Números Inteiros:</strong> Datas, Temperaturas negativas (ex.: -3°C).</li>
@@ -154,7 +174,7 @@
             </ul>
             <hr>
 
-            <h2 id="exercicios"><strong>6. Exercícios Propostos (Quiz)</strong></h2>
+            <h2 id="exercicios"><strong>7. Exercícios Propostos (Quiz)</strong></h2>
             <div class="quiz-container">
                 <form id="quiz-form">
                     <!-- Pergunta 1 -->
