--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -26,7 +26,7 @@
             <a href="#numeros-naturais">Números Naturais</a>
             <a href="#numeros-inteiros">Números Inteiros</a>
             <a href="#numeros-racionais">Números Racionais</a>
-            <a href="#numeros-reais">Números Racionais</a>
+            <a href="#numeros-reais">Números Reais</a>
             <a href="#comparacao">Comparação</a>
             <a href="#exemplos">Exemplos na Vida Real</a>
             <a href="#exercicios">Exercícios Propostos</a>
@@ -90,7 +90,26 @@
             </ul>
             <hr>
 
-            <h2 id="comparacao"><strong>4. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
+            <h2 id="numeros-reais"><strong>4. Números Reais</strong></h2>
+        <p><strong>Definição:</strong> Os <strong>números reais</strong> incluem todos os números que podem ser representados na reta numérica. Isso abrange os números racionais (frações) e os números irracionais, que não podem ser expressos como uma fração de dois inteiros. Em outras palavras, os números reais são qualquer número que pode ser escrito com uma parte decimal.</p>
+        <p><strong>Exemplo:</strong> <span class="example-number">R = {..., -2,5, -√2, 0, 1, π, 3,1415...}</span>. Exemplos incluem números como 1, -3/2, √2 (raiz quadrada de 2), e π (pi).</p>
+
+        <p><strong>Propriedades:</strong></p>
+        <ul>
+            <li><strong>Completo:</strong> A principal característica dos números reais é que eles preenchem completamente a reta numérica. Ou seja, qualquer ponto na reta pode ser representado por um número real, seja ele racional ou irracional. Por exemplo, entre 1 e 2, além das frações como 1/2, também existem números irracionais como √2.</li>
+            <li><strong>Inclui números irracionais:</strong> Números irracionais são aqueles que não podem ser expressos como uma fração, e têm decimais infinitos não periódicos. Exemplos de números irracionais são π (pi ≈ 3,14159...) e √2 (raiz de 2 ≈ 1,414...). Esses números não podem ser escritos como frações simples e seus decimais nunca terminam nem se repetem em um padrão.</li>
+            <li><strong>Fechamento:</strong> Como os números racionais, os números reais também são fechados para adição, subtração, multiplicação e divisão (exceto divisão por zero). Por exemplo, somar √2 e 3 resulta em outro número real: 3 + √2 ≈ 4,414.</li>
+        </ul>
+
+        <p><strong>Aplicação:</strong> Os números reais são utilizados em praticamente todas as situações de medição no mundo físico, como:
+        <ul>
+            <li><strong>Medição de comprimento:</strong> Se você medir a altura de uma pessoa, pode obter um número real como 1,75 metros.</li>
+            <li><strong>Áreas e volumes:</strong> Para calcular a área de um círculo, utilizamos π. Se o raio do círculo é 1 metro, a área será <span class="example-number">π m²</span>, ou aproximadamente <span class="example-number">3,14159 m²</span>.</li>
+            <li><strong>Física:</strong> Muitos fenômenos físicos, como velocidade, aceleração, e energia, são descritos com números reais, inclusive números irracionais como √2 e π em fórmulas matemáticas.</li>
+        </ul>
+        <hr>
+
+            <h2 id="comparacao"><strong>5. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
         <p>Os números naturais, inteiros e racionais fazem parte do conjunto de números que usamos no dia a dia, mas possuem algumas diferenças importantes em termos de suas propriedades e usos. A tabela abaixo resume essas diferenças:</p>
         <table>
             <thead>
@@ -147,32 +166,39 @@
         </ul>
         <hr>
 
-        <h2 id="numeros-reais"><strong>5. Números Reais</strong></h2>
-        <p><strong>Definição:</strong> Os <strong>números reais</strong> incluem todos os números que podem ser representados na reta numérica. Isso abrange os números racionais (frações) e os números irracionais, que não podem ser expressos como uma fração de dois inteiros. Em outras palavras, os números reais são qualquer número que pode ser escrito com uma parte decimal.</p>
-        <p><strong>Exemplo:</strong> <span class="example-number">R = {..., -2,5, -√2, 0, 1, π, 3,1415...}</span>. Exemplos incluem números como 1, -3/2, √2 (raiz quadrada de 2), e π (pi).</p>
-
-        <p><strong>Propriedades:</strong></p>
+        
+        <h2 id="exemplos"><strong>6. Exemplos de Aplicações na Vida Real</strong></h2>
+        <p>Os números que usamos em diferentes contextos do dia a dia podem ser classificados em naturais, inteiros, racionais e reais. Cada tipo de número é adequado para uma situação específica. Abaixo estão exemplos de como cada conjunto de números é aplicado em cenários práticos.</p>
         <ul>
-            <li><strong>Completo:</strong> A principal característica dos números reais é que eles preenchem completamente a reta numérica. Ou seja, qualquer ponto na reta pode ser representado por um número real, seja ele racional ou irracional. Por exemplo, entre 1 e 2, além das frações como 1/2, também existem números irracionais como √2.</li>
-            <li><strong>Inclui números irracionais:</strong> Números irracionais são aqueles que não podem ser expressos como uma fração, e têm decimais infinitos não periódicos. Exemplos de números irracionais são π (pi ≈ 3,14159...) e √2 (raiz de 2 ≈ 1,414...). Esses números não podem ser escritos como frações simples e seus decimais nunca terminam nem se repetem em um padrão.</li>
-            <li><strong>Fechamento:</strong> Como os números racionais, os números reais também são fechados para adição, subtração, multiplicação e divisão (exceto divisão por zero). Por exemplo, somar √2 e 3 resulta em outro número real: 3 + √2 ≈ 4,414.</li>
-        </ul>
+            <li><strong>Números Naturais:</strong> 
+                <p>Os números naturais são utilizados para contar e descrever quantidades inteiras e positivas, sem frações ou decimais.</p>
+                <ul>
+                    <li><strong>Contagem de pessoas:</strong> Em uma sala de aula, podemos contar o número de alunos presentes, como 25 alunos.</li>
+                    <li><strong>Inventário:</strong> No estoque de uma loja, números naturais são usados para contar quantos produtos estão disponíveis, como 100 unidades de um determinado item.</li>
+                    <li><strong>Pontos em jogos:</strong> Em um jogo de futebol, os pontos são representados por números naturais. Por exemplo, o placar final pode ser 3 a 1.</li>
+                </ul>
+            </li>
 
-        <p><strong>Aplicação:</strong> Os números reais são utilizados em praticamente todas as situações de medição no mundo físico, como:
-        <ul>
-            <li><strong>Medição de comprimento:</strong> Se você medir a altura de uma pessoa, pode obter um número real como 1,75 metros.</li>
-            <li><strong>Áreas e volumes:</strong> Para calcular a área de um círculo, utilizamos π. Se o raio do círculo é 1 metro, a área será <span class="example-number">π m²</span>, ou aproximadamente <span class="example-number">3,14159 m²</span>.</li>
-            <li><strong>Física:</strong> Muitos fenômenos físicos, como velocidade, aceleração, e energia, são descritos com números reais, inclusive números irracionais como √2 e π em fórmulas matemáticas.</li>
+            <li><strong>Números Inteiros:</strong> 
+                <p>Os números inteiros, que incluem números negativos e zero, são usados para representar mudanças e diferenças em contextos que podem envolver quantidades abaixo de zero.</p>
+                <ul>
+                    <li><strong>Temperaturas:</strong> Em lugares frios, a temperatura pode ser negativa, como -5°C em um dia de inverno.</li>
+                    <li><strong>Saldo bancário:</strong> Se o saldo da sua conta bancária está negativo, ele pode ser representado por um número inteiro, como -200 reais, indicando que você está em dívida.</li>
+                    <li><strong>Datas:</strong> Quando calculamos a diferença entre anos, como ao falar de antes de Cristo (AC) e depois de Cristo (DC), usamos números inteiros. Por exemplo, 500 AC e 2024 DC.</li>
+                </ul>
+            </li>
+
+            <li><strong>Números Racionais:</strong> 
+                <p>Os números racionais são usados quando precisamos de precisão e de medições que envolvem frações ou decimais.</p>
+                <ul>
+                    <li><strong>Pesagem de alimentos:</strong> Se você vai comprar 1,5 kg de frutas, está utilizando um número racional, pois 1,5 é uma fração (3/2).</li>
+                    <li><strong>Divisão de uma conta:</strong> Ao dividir o valor de uma conta de restaurante entre amigos, cada pessoa pode pagar uma fração do total, como ⅓ ou ¼ da conta.</li>
+                    <li><strong>Taxas de juros:</strong> Em finanças, as taxas de juros são geralmente expressas em números racionais. Por exemplo, uma taxa de 2,5% ao mês é um número racional (2,5/100).</li>
+                </ul>
+            </li>
         </ul>
         <hr>
 
-            <h2 id="exemplos"><strong>6. Exemplos de Aplicações na Vida Real</strong></h2>
-            <ul>
-                <li><strong>Números Naturais:</strong> Contagem de objetos (ex.: alunos em uma sala).</li>
-                <li><strong>Números Inteiros:</strong> Datas, Temperaturas negativas (ex.: -3°C).</li>
-                <li><strong>Números Racionais:</strong> Medições precisas, peso, saldo do banco etc.</li>
-            </ul>
-            <hr>
 
             <h2 id="exercicios"><strong>7. Exercícios Propostos (Quiz)</strong></h2>
             <div class="quiz-container">
