--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -26,6 +26,7 @@
             <a href="#numeros-naturais">Números Naturais</a>
             <a href="#numeros-inteiros">Números Inteiros</a>
             <a href="#numeros-racionais">Números Racionais</a>
+            <a href="#numeros-irracionais">Números Irracionais</a>
             <a href="#numeros-reais">Números Reais</a>
             <a href="#comparacao">Comparação</a>
             <a href="#exemplos">Exemplos na Vida Real</a>
@@ -90,7 +91,26 @@
             </ul>
             <hr>
 
-            <h2 id="numeros-reais"><strong>4. Números Reais</strong></h2>
+            <h2 id="numeros-irracionais"><strong>4. Números Irracionais</strong></h2>
+            <p><strong>Definição:</strong> Os <strong>números irracionais</strong> são números que não podem ser expressos como uma fração exata de dois inteiros. Eles possuem uma expansão decimal infinita e não periódica, ou seja, seus decimais nunca terminam e não seguem um padrão repetitivo.</p>
+            <p><strong>Exemplo:</strong> <span class="example-number">I = {√2, π, e, φ, ...}</span>. Exemplos incluem a raiz quadrada de 2 (<span class="example-number">√2 ≈ 1,41421...</span>), o número π (<span class="example-number">π ≈ 3,14159...</span>), o número de Euler (<span class="example-number">e ≈ 2,71828...</span>), e a razão áurea (<span class="example-number">φ ≈ 1,61803...</span>).</p>
+
+            <p><strong>Propriedades:</strong></p>
+            <ul>
+                <li><strong>Infinidade não periódica:</strong> Os números irracionais possuem casas decimais infinitas e não repetitivas. Por exemplo, o número π continua infinitamente: <span class="example-number">π = 3,14159265358979...</span>, e nunca segue um padrão repetitivo.</li>
+                <li><strong>Não podem ser expressos como frações:</strong> Diferente dos números racionais, os irracionais não podem ser representados como <span class="example-number">a/b</span>, onde <span class="example-number">a</span> e <span class="example-number">b</span> são inteiros.</li>
+                <li><strong>Fechamento para adição e multiplicação:</strong> A soma ou multiplicação de dois números irracionais nem sempre resulta em um número irracional. Por exemplo, <span class="example-number">√2 + (-√2) = 0</span> (um número racional), mas <span class="example-number">√2 × √2 = 2</span> (um número inteiro).</li>
+            </ul>
+
+            <p><strong>Aplicação:</strong> Números irracionais aparecem em muitas áreas da matemática, ciência e engenharia, incluindo:</p>
+            <ul>
+                <li><strong>Cálculo de áreas e perímetros de círculos:</strong> O número <span class="example-number">π</span> é essencial para calcular a área e o perímetro de círculos. Por exemplo, a área de um círculo com raio de 1 metro é <span class="example-number">π m²</span>.</li>
+                <li><strong>Fenômenos naturais:</strong> O número <span class="example-number">e</span> é utilizado em cálculos de crescimento exponencial, como o crescimento populacional e o decaimento radioativo.</li>
+                <li><strong>Arquitetura e design:</strong> A razão áurea (<span class="example-number">φ</span>) é frequentemente usada em proporções estéticas, como na construção de edifícios e na arte.</li>
+            </ul>
+            <hr>
+
+            <h2 id="numeros-reais"><strong>5. Números Reais</strong></h2>
         <p><strong>Definição:</strong> Os <strong>números reais</strong> incluem todos os números que podem ser representados na reta numérica. Isso abrange os números racionais (frações) e os números irracionais, que não podem ser expressos como uma fração de dois inteiros. Em outras palavras, os números reais são qualquer número que pode ser escrito com uma parte decimal.</p>
         <p><strong>Exemplo:</strong> <span class="example-number">R = {..., -2,5, -√2, 0, 1, π, 3,1415...}</span>. Exemplos incluem números como 1, -3/2, √2 (raiz quadrada de 2), e π (pi).</p>
 
@@ -109,7 +129,7 @@
         </ul>
         <hr>
 
-            <h2 id="comparacao"><strong>5. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
+            <h2 id="comparacao"><strong>6. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
         <p>Os números naturais, inteiros e racionais fazem parte do conjunto de números que usamos no dia a dia, mas possuem algumas diferenças importantes em termos de suas propriedades e usos. A tabela abaixo resume essas diferenças:</p>
         <table>
             <thead>
@@ -167,7 +187,7 @@
         <hr>
 
         
-        <h2 id="exemplos"><strong>6. Exemplos de Aplicações na Vida Real</strong></h2>
+        <h2 id="exemplos"><strong>7. Exemplos de Aplicações na Vida Real</strong></h2>
         <p>Os números que usamos em diferentes contextos do dia a dia podem ser classificados em naturais, inteiros, racionais e reais. Cada tipo de número é adequado para uma situação específica. Abaixo estão exemplos de como cada conjunto de números é aplicado em cenários práticos.</p>
         <ul>
             <li><strong>Números Naturais:</strong> 
@@ -200,7 +220,7 @@
         <hr>
 
 
-            <h2 id="exercicios"><strong>7. Exercícios Propostos (Quiz)</strong></h2>
+            <h2 id="exercicios"><strong>8. Exercícios Propostos (Quiz)</strong></h2>
             <div class="quiz-container">
                 <form id="quiz-form">
                     <!-- Pergunta 1 -->
