--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -129,8 +129,8 @@
         </ul>
         <hr>
 
-            <h2 id="comparacao"><strong>6. Comparação Entre Números Naturais, Inteiros e Racionais</strong></h2>
-        <p>Os números naturais, inteiros e racionais fazem parte do conjunto de números que usamos no dia a dia, mas possuem algumas diferenças importantes em termos de suas propriedades e usos. A tabela abaixo resume essas diferenças:</p>
+        <h2 id="comparacao"><strong>6. Comparação Entre Números Naturais, Inteiros, Racionais e Irracionais</strong></h2>
+        <p>Os números naturais, inteiros, racionais e irracionais fazem parte do conjunto de números que usamos no dia a dia, mas possuem algumas diferenças importantes em termos de suas propriedades e usos. A tabela abaixo resume essas diferenças:</p>
         <table>
             <thead>
                 <tr>
@@ -138,6 +138,7 @@
                     <th>Números Naturais</th>
                     <th>Números Inteiros</th>
                     <th>Números Racionais</th>
+                    <th>Números Irracionais</th>
                 </tr>
             </thead>
             <tbody>
@@ -146,10 +147,12 @@
                     <td>{0, 1, 2, 3, ...}</td>
                     <td>{..., -2, -1, 0, 1, 2, ...}</td>
                     <td><span class="example-number">a/b</span>, onde <span class="example-number">a</span> e <span class="example-number">b</span> são inteiros e <span class="example-number">b ≠ 0</span></td>
+                    <td>Decimais infinitos e não periódicos, como √2, π</td>
                 </tr>
                 <tr>
                     <td><strong>Contém números negativos?</strong></td>
                     <td>Não</td>
+                    <td>Sim</td>
                     <td>Sim</td>
                     <td>Sim</td>
                 </tr>
@@ -158,35 +161,39 @@
                     <td>Não</td>
                     <td>Não</td>
                     <td>Sim</td>
+                    <td>Não</td>
                 </tr>
                 <tr>
                     <td><strong>Operações fechadas?</strong></td>
                     <td>Sim (para adição e multiplicação)</td>
                     <td>Sim (para adição, subtração e multiplicação)</td>
                     <td>Sim (para adição, subtração, multiplicação e divisão, exceto por zero)</td>
+                    <td>Não sempre (adição e multiplicação podem gerar números racionais ou irracionais)</td>
+                </tr>
+                <tr>
+                    <td><strong>Decimais</strong></td>
+                    <td>Não tem decimais</td>
+                    <td>Não tem decimais</td>
+                    <td>Finitos ou periódicos</td>
+                    <td>Infinitos e não repetitivos</td>
                 </tr>
             </tbody>
         </table>
 
         <p><strong>Explicação detalhada:</strong></p>
         <ul>
-            <li><strong>Representação:</strong> Os <strong>números naturais</strong> são os números inteiros não negativos que usamos para contar objetos, como "1 maçã", "2 livros", e assim por diante. Os <strong>números inteiros</strong> incluem todos os números naturais, além de seus opostos negativos (por exemplo, -1, -2, -3). Já os <strong>números racionais</strong> podem ser expressos como frações, ou seja, a divisão de dois números inteiros, como 1/2, 3/4, etc.</li>
+            <li><strong>Representação:</strong> Os <strong>números naturais</strong> são inteiros positivos usados para contar. Os <strong>números inteiros</strong> incluem negativos, e os <strong>racionais</strong> são frações de inteiros. Os <strong>irracionais</strong> são números com decimais infinitos, como <span class="example-number">π</span> e <span class="example-number">√2</span>.</li>
 
-            <li><strong>Números negativos:</strong> Apenas os <strong>números inteiros</strong> e <strong>racionais</strong> podem ser negativos. Por exemplo, em uma conta bancária, um saldo negativo pode ser representado como -50, indicando que você está devendo 50 reais.</li>
+            <li><strong>Números negativos:</strong> Apenas os <strong>números inteiros</strong>, <strong>racionais</strong> e <strong>irracionais</strong> podem ser negativos, enquanto os <strong>naturais</strong> começam do zero.</li>
 
-            <li><strong>Frações:</strong> Apenas os <strong>números racionais</strong> podem ser expressos como frações. Por exemplo, se você cortar uma pizza em 4 pedaços e comer 3, pode dizer que comeu 3/4 da pizza.</li>
+            <li><strong>Frações:</strong> Os <strong>números racionais</strong> podem ser expressos como frações (<span class="example-number">a/b</span>), mas os <strong>irracionais</strong> não.</li>
 
-            <li><strong>Operações fechadas:</strong> Isso significa que, se você fizer certas operações (como soma, subtração, multiplicação ou divisão) entre dois números do mesmo conjunto, o resultado também estará dentro desse conjunto. 
-                <ul>
-                    <li>Para os <strong>números naturais</strong>, a soma e multiplicação sempre resultam em outro número natural (por exemplo, 2 + 3 = 5).</li>
-                    <li>Para os <strong>números inteiros</strong>, além da soma e multiplicação, a subtração também resulta em um número inteiro (por exemplo, 5 - 7 = -2).</li>
-                    <li>Os <strong>números racionais</strong> são fechados para soma, subtração, multiplicação e divisão (exceto divisão por zero). Por exemplo, 1/2 + 1/3 = 5/6.</li>
-                </ul>
-            </li>
+            <li><strong>Operações fechadas:</strong> Somar, subtrair ou multiplicar números do mesmo conjunto resulta, em geral, em um número do mesmo conjunto. No entanto, a soma ou multiplicação de dois <strong>irracionais</strong> pode resultar em um racional, como no caso de <span class="example-number">√2 × √2 = 2</span>.</li>
+
+            <li><strong>Decimais:</strong> Os <strong>números racionais</strong> têm decimais finitos ou repetitivos, enquanto os <strong>irracionais</strong> têm decimais infinitos e não repetitivos.</li>
         </ul>
         <hr>
 
-        
         <h2 id="exemplos"><strong>7. Exemplos de Aplicações na Vida Real</strong></h2>
         <p>Os números que usamos em diferentes contextos do dia a dia podem ser classificados em naturais, inteiros, racionais e reais. Cada tipo de número é adequado para uma situação específica. Abaixo estão exemplos de como cada conjunto de números é aplicado em cenários práticos.</p>
         <ul>
