--- a/modulo1/numeros-operacoes.html
+++ b/modulo1/numeros-operacoes.html
@@ -195,7 +195,7 @@
         <hr>
 
         <h2 id="exemplos"><strong>7. Exemplos de Aplicações na Vida Real</strong></h2>
-        <p>Os números que usamos em diferentes contextos do dia a dia podem ser classificados em naturais, inteiros, racionais e reais. Cada tipo de número é adequado para uma situação específica. Abaixo estão exemplos de como cada conjunto de números é aplicado em cenários práticos.</p>
+        <p>Os números que usamos em diferentes contextos do dia a dia podem ser classificados em naturais, inteiros, racionais, irracionais e reais. Cada tipo de número é adequado para uma situação específica. Abaixo estão exemplos de como cada conjunto de números é aplicado em cenários práticos.</p>
         <ul>
             <li><strong>Números Naturais:</strong> 
                 <p>Os números naturais são utilizados para contar e descrever quantidades inteiras e positivas, sem frações ou decimais.</p>
@@ -223,9 +223,26 @@
                     <li><strong>Taxas de juros:</strong> Em finanças, as taxas de juros são geralmente expressas em números racionais. Por exemplo, uma taxa de 2,5% ao mês é um número racional (2,5/100).</li>
                 </ul>
             </li>
+
+            <li><strong>Números Irracionais:</strong> 
+                <p>Os números irracionais aparecem em situações onde não podemos representar a medida com uma fração simples, e seus decimais são infinitos e não periódicos.</p>
+                <ul>
+                    <li><strong>Medição de diagonais:</strong> A diagonal de um quadrado com lados de 1 metro é aproximadamente 1,414 metros, representada pelo número irracional √2.</li>
+                    <li><strong>Cálculos envolvendo o círculo:</strong> Para calcular a circunferência de um círculo, usamos o número irracional π (pi), que é aproximadamente 3,14159...</li>
+                    <li><strong>Constantes da natureza:</strong> Muitas constantes físicas, como a constante de Planck, são irracionais, e seus valores são aproximados para cálculos práticos.</li>
+                </ul>
+            </li>
+
+            <li><strong>Números Reais:</strong> 
+                <p>Os números reais englobam todos os números naturais, inteiros, racionais e irracionais, sendo usados para representar praticamente qualquer quantidade mensurável no mundo real.</p>
+                <ul>
+                    <li><strong>Distâncias e medidas:</strong> Para medir distâncias, como 3,75 metros ou √2 metros, usamos números reais. Essas medidas podem ser frações exatas ou aproximações.</li>
+                    <li><strong>Análises financeiras:</strong> Saldo bancário, taxas de câmbio, e valores de mercado são representados por números reais, incluindo frações e decimais.</li>
+                    <li><strong>Geometria e física:</strong> Muitas fórmulas geométricas e físicas, como o cálculo de áreas, volumes ou forças, utilizam números reais para representar quantidades exatas ou aproximadas.</li>
+                </ul>
+            </li>
         </ul>
         <hr>
-
 
             <h2 id="exercicios"><strong>8. Exercícios Propostos (Quiz)</strong></h2>
             <div class="quiz-container">
